client/src/App.css
.app {
  display: flex;
  height: 100vh;
  width: 100%;
  margin: 0;
  padding: 0;
}

.leftSide{
  display: flex;
  flex-direction: column;
  width: 30%;
  height: 100vh;
  gap: 2rem;
}



.rightSide{
  display: flex;
  width: 85%;
  height: 90%;
  margin: auto;
}

.leftSide button {
  margin: 0.5rem;
  padding: 10px;
  cursor: pointer;
  flex-shrink: 0; /* Prevents the button from being squished */
}

